add new branch less-2

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a href="#" class="nav__menu_link">Hot Deals</a>
         </nav>
         <main>
+            <!-- Products items-->
             <div class="product container">
                 <div class="products"></div>
             </div>
