--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             <div class="header_user_menu">
                 <div class="header_basket">
                     <a class="user_basket" href="#"><img src="icon/cart_icon.png" alt="" /></a>
+                    <div id="goods-list-section" class="goods-list">
+                        <div id="goods-list-section__modal">
+                            <input type="submit" value="X" id="goods-list-section__delete" />
+                            <h3 id="goods-list_head-line">Корзина</h3>
+                            <div id="goods-list__product-box"></div>
+                            <p id="goods-list__total"></p>
+                        </div>
+                    </div>
                 </div>
                 <button type="button" name="button" class="user_menu_item">My Account</button>
             </div>
@@ -43,7 +51,20 @@
                 <div class="products"></div>
             </div>
         </main>
+
+        <!-- <template class="template-goods-list">
+            <div class="goods-list__product-box">
+                <span class="goods-list__product-box__name">Товар</span>
+                <img class="goods-list__product-box__img" src="" height="120px" alt="" />
+                <div class="goods-list__product-box__price">Цена</div>
+                <div class="goods-list__product-box__quantity">Количество</div>
+                <div class="goods-list__product-box__totalPrice">Итого</div>
+                <input type="submit" value="X" class="goods-list-item__product-box__delete" />
+            </div>
+        </template> -->
+
         <script src="js/main.js"></script>
+
         <footer class="footer">
             <div class="footer_copyright container">
                 <p class="copy_text">&copy; 2021 TechNoir All Rights Reserved.</p>
